style.css
/* ... */
@media screen and (max-width: 580px) {
    li {
        max-width: 25rem;
        padding: 1.6rem;
    }

    label {
        margin-right: 1.6rem;
    }

    .title {
        font-size: 4rem;
        margin-right: 0;
    }

    .sub-title {
        font-size: 2.6rem;
        display: block;
    }

    .heading-div {
        margin-bottom: 3.2rem;
    }

    .tasks-heading {
        font-size: 2.6rem;
        margin-bottom: 1.6rem;
    }

    .empty-state-title {
        margin-top: 1.6rem;
    }

    .fab {
        padding: 1.6rem;
    }

    #main-div {
        margin-top: 1.6rem;
    }
}

@media screen and (max-width: 450px) {
    .todo-list-input:hover {
        box-shadow: none;
    }

    .fab:hover {
        box-shadow: none;
        margin-bottom: 3.2rem;
        background-color: var(--color-black);
        fill: var(--color-white);
    }

    .add-button:hover {
        box-shadow: none;
    }

    li:hover {
        box-shadow: none;
    }

    .delete-button:hover {
        opacity: 1;
    }
}

/* Multi-column layout for larger screens */
@media screen and (min-width: 900px) {
    li {
        padding: 1.6rem;
        margin: 0 1.6rem 3.2rem 1.6rem;
    }
    .todo-list {
        width: 55vw;
        margin: auto;
        flex-flow: row wrap;
        justify-content: center;
        align-items: flex-start;
    }
}

